[package]
name = "mlr-rs-bela"
version = "0.1.0"
authors = ["Paul Adenot <paul@paul.cx>"]


[dependencies]
mlr-rs = { version = "0.1", path = "../mlr-rs/" }
audio-clock = "0.2.0"
log = "0.4.2"
pretty_env_logger = "0.2.3"
bela = { path = "../../bela-rs" }

[profile.release]
lto = true
panic = 'abort'
