[package]
name = "mlr-rs"
version = "0.1.0"
authors = ["Paul Adenot <paul@paul.cx>"]

[features]
bela-mbms = ["bela", "mbms-traits"]

[dependencies]
audrey = "0.2.0"
monome-rs = { path = "../../monome-rs" }
log = "0.4.2"
pretty_env_logger = "0.2.3"
timer = "0.2"
chrono = "0.4"
audio-clock = "0.2.0"
bela = { path = "../../bela-rs", optional = true }
mbms-traits = { path = "../../mbms-traits", optional = true }

